Default filters to invisible. Fix issue with project-details animation not starting from invisible state. Set z-index of project-details model background below filters button. Small adjustment to filters panel padding.

--- a/src/app/root/work/project-details/project-details.component.scss
+++ b/src/app/root/work/project-details/project-details.component.scss
@@ -17,7 +17,7 @@ $padding-content: 20px 0;
 
 .jl-modal-bg {
   position: fixed;
-  z-index: 100;
+  z-index: 1900;
   top: 0;
   right: 0;
   bottom: 0;
