--- a/src/app/root/work/project-filters/project-filters.component.scss
+++ b/src/app/root/work/project-filters/project-filters.component.scss
@@ -18,10 +18,6 @@
     margin-top: 1.5rem;
   }
 
-  &:last-of-type {
-    margin-bottom: .5rem;
-  }
-
   h2 {
     letter-spacing: .1em;
     text-transform: uppercase;
