--- a/src/app/root/work/work.component.scss
+++ b/src/app/root/work/work.component.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/mixins';
 
 .jl-work-content {
-  padding: 1.5rem 0;
+  margin: 2rem 0;
 }
 
 .jl-project-previews {
